# webgpu-native-js

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  b4c-bytecode.js  rust-toolchain.toml
adapters/boa/: Cargo.toml
adapters/boa/src/: lib.rs
adapters/javascriptcore/: Cargo.toml  build.rs
adapters/javascriptcore/src/: imp.rs  lib.rs
adapters/quickjs/: Cargo.toml  build.rs
adapters/quickjs/src/: lib.rs
adapters/quickjs/tests/scripts/: buffer_slice.js
codegen/: Cargo.toml  policy.toml
codegen/src/: dispatch.rs  emission.rs  lib.rs  lifecycle.rs
codegen/tests/: fixtures.rs
codegen/tests/fixtures/: bind_group_layout.idl  bind_group_layout.policy.toml  bind_group_layout.rs  bind_group_layout.yml  clamp.idl  clamp.policy.toml  clamp.rs  clamp.yml  clean.idl  clean.policy.toml  clean.yml  descriptor_surface.rs  dict_or_sequence.idl  dict_or_sequence.policy.toml  dict_or_sequence.rs  dict_or_sequence.yml  dispatch_surface.rs  emission.idl  emission.policy.toml  emission.rs  emission.yml  enforce_range.idl  enforce_range.policy.toml  enforce_range.yml  full_surface.rs  lifecycle.idl  lifecycle.policy.toml  lifecycle.rs  lifecycle.yml  name_mismatch.idl  name_mismatch.policy.toml  name_mismatch.yml  nullable_required.idl  nullable_required.policy.toml  nullable_required.yml  unknown_interface.idl  unknown_interface.policy.toml  unknown_interface.yml
core/: Cargo.toml  build.rs
core/src/: commonjs.rs  lib.rs  mock.rs
examples/bounce/: Cargo.toml  README.md  bounce.js  expected.txt
examples/bounce/src/: main.rs
examples/compute/: Cargo.toml  README.md  compute.js
examples/compute/src/: main.rs
examples/triangle/: Cargo.toml  README.md  triangle.js
examples/triangle/src/: main.rs
ffi/: Cargo.toml  build.rs  build_support.rs
ffi/src/: lib.rs
ffi/tests/: build_support.rs
specs/: webgpu-native-js-project-plan.md
specs/blocks/: 01-core-engine-boundary.md  02-async-and-mapping.md  03-api-surface.md  04-javascriptcore.md  05-codegen.md  06-mobile-bring-up.md  07-error-scopes.md  08-parity-suite.md  09-texture-render-surface.md  10-introspection.md  11-examples.md  12-module-loading.md  13-cts-runner.md  14-boa-engine.md  15-frame-call-in.md  16-jsc-modules.md  17-immediate-data.md  18-commonjs-loader.md  19-skeleton-data-split.md  20-explicit-release.md
specs/design/: scene-graph-pre-spec.md
specs/reference/: dependencies.md  workflow.md
specs/tracking/: b4c-fork-handoff.md  b4c-notes.md  backend-deltas.md  codegen-deltas.md  cts.md  engine-boundary.md  event-loop.md  phase-reviews.md  release-queue.md
spikes/event-loop-pump/: Cargo.toml  build.rs
spikes/event-loop-pump/src/: lib.rs
spikes/jsc-detach/: Cargo.toml
spikes/jsc-detach/src/: lib.rs
spikes/quickjs-detach/: Cargo.toml  build.rs
spikes/quickjs-detach/src/: lib.rs
spikes/release-queue/: Cargo.toml  build.rs
spikes/release-queue/src/: lib.rs
tests/: bind-group-resources.js  device-events.js  error-classes.js  error-rejection.js
tests/parity/: expected.txt  parity.js
tools/cts-runner/: Cargo.toml  README.md  expectations.txt  glue.mjs  shims.js
tools/cts-runner/src/: lib.rs  main.rs
tools/cts-runner/suites/: operation-dawn.txt  unittests.txt  validation-core.txt
