[package]
name = "webgpu-native-js-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license.workspace = true
repository.workspace = true

[features]
default = []
mock = []

[dependencies]
webgpu-native-js-ffi = { path = "../ffi", default-features = false }

[build-dependencies]
webgpu-native-js-codegen = { path = "../codegen" }
