[package]
name = "release-queue"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
backend-yawgpu = ["ffi/backend-yawgpu"]
backend-wgpu-native = ["ffi/backend-wgpu-native"]
backend-dawn = ["ffi/backend-dawn"]

[dependencies]
ffi = { path = "../../ffi" }

[build-dependencies]
bindgen = "0.72.1"
cc = "1"
