[package]
name = "release-queue"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
backend-yawgpu = ["webgpu-native-js-ffi/backend-yawgpu"]
backend-wgpu-native = ["webgpu-native-js-ffi/backend-wgpu-native"]
backend-dawn = ["webgpu-native-js-ffi/backend-dawn"]

[dependencies]
webgpu-native-js-ffi = { path = "../../ffi" }
