[package]
name = "cts-runner"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "cts-runner"
path = "src/main.rs"
test = false

[features]
default = ["backend-yawgpu", "engine-quickjs"]
engine-quickjs = ["dep:quickjs-adapter"]
engine-boa = ["dep:boa-adapter"]
backend-yawgpu = [
    "quickjs-adapter?/backend-yawgpu",
    "boa-adapter?/backend-yawgpu",
    "webgpu-native-js-ffi/backend-yawgpu",
]
backend-wgpu-native = [
    "quickjs-adapter?/backend-wgpu-native",
    "boa-adapter?/backend-wgpu-native",
    "webgpu-native-js-ffi/backend-wgpu-native",
]
backend-dawn = [
    "quickjs-adapter?/backend-dawn",
    "boa-adapter?/backend-dawn",
    "webgpu-native-js-ffi/backend-dawn",
]

[dependencies]
boa-adapter = { path = "../../adapters/boa", default-features = false, optional = true }
quickjs-adapter = { path = "../../adapters/quickjs", default-features = false, optional = true }
webgpu-native-js-ffi = { path = "../../ffi", default-features = false }
