[package]
name = "cts-runner"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license.workspace = true
repository.workspace = true

[[bin]]
name = "cts-runner"
path = "src/main.rs"
test = false

[features]
default = ["backend-yawgpu"]
backend-yawgpu = [
    "boa-adapter/backend-yawgpu",
    "webgpu-native-js-ffi/backend-yawgpu",
]
backend-wgpu-native = [
    "boa-adapter/backend-wgpu-native",
    "webgpu-native-js-ffi/backend-wgpu-native",
]
backend-dawn = [
    "boa-adapter/backend-dawn",
    "webgpu-native-js-ffi/backend-dawn",
]

[dependencies]
boa-adapter = { path = "../../adapters/boa", default-features = false }
webgpu-native-js-ffi = { path = "../../ffi", default-features = false }
